@@ -448,7 +448,7 @@ bool OBBond::IsClosure()
     uatoms.Resize(mol->NumAtoms()+1);
     ubonds.Resize(mol->NumAtoms()+1);
 
-    for (;uatoms.CountBits() < (signed)mol->NumAtoms();)
+    for (;uatoms.CountBits() < mol->NumAtoms();)
     {
         if (curr.empty())
             for (atom = mol->BeginAtom(i);atom;atom = mol->NextAtom(i))
