@@ -1,3 +1,8 @@
+2006-06-26  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/base.h src/generic.cpp, src/generic.h, src/mol.h,
+	src/bond.cpp: Documentation changes, including several from Carsten.
+
 2006-06-23  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/obiter.h, src/obiter.cpp: Add depth-first and breadth-first
